syntax = "proto3";

option java_package = "org.orosoft.product";
option java_multiple_files = true;

message ProductRequest{
  string request = 1;
  string userId = 2;
}

message ProductResponse{
  string response = 1;
}

message VoidResponse{}

service ProductService{
  rpc getProductResponseForPings(ProductRequest) returns (ProductResponse);
  rpc updateRecentViewProductTable(ProductRequest) returns (VoidResponse);
  rpc updateCartProductsTable(ProductRequest) returns (VoidResponse);
}